--- a/src/style.css
+++ b/src/style.css
@@ -1228,6 +1228,7 @@ ul#navigation li:hover {
   height: 83px;
   background: url(images/playlist.png) no-repeat;
   margin-bottom:25px;
+  margin-top:-100px;
 }
 .spotify {
   display:block;
