--- a/src/style.css
+++ b/src/style.css
@@ -1228,7 +1228,7 @@ ul#navigation li:hover {
   height: 83px;
   background: url(images/playlist.png) no-repeat;
   margin-bottom:25px;
-  margin-top:-100px;
+  /*margin-top:-100px;*/
 }
 .spotify {
   display:block;
@@ -1589,6 +1589,7 @@ display: block;
 	.music-title {
 	    width: 100%;
 	    background-position-x: 50%;
+      margin-top:-100px;
 	}
 	div#header {
 	    height: 120px;
