--- a/src/style.css
+++ b/src/style.css
@@ -157,6 +157,7 @@ body {
   margin:0;
   background-color:#383838;
   filter:alpha(opacity=70);
+  padding-top: 13%;
   /* CSS3 standard */
   opacity:0.7;
   z-index: 1;
